--- a/.classpath
+++ b/.classpath
@@ -7,7 +7,29 @@
 	<classpathentry kind="src" path="interfaces"/>
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="libraries/selenium-server-standalone-3.141.59.jar"/>
-	<classpathentry kind="lib" path="libraries/testng-6.14.3.jar"/>
+	<classpathentry kind="lib" path="libraries/selenium-server-standalone-3.141.59.jar" sourcepath="libraries/selenium-3.141.59-nodeps-sources.jar"/>
+	<classpathentry kind="lib" path="libraries/testng-6.14.3.jar" sourcepath="libraries/testng-6.14.3-sources.jar"/>
+	<classpathentry kind="lib" path="libraries/selenium-3.141.59-nodeps-sources.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManager/commons-codec-1.13.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManager/commons-collections4-4.3.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManager/commons-compress-1.20.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManager/commons-io-2.7.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManager/commons-lang3-3.11.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManager/gson-2.8.6.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManager/httpclient5-5.0.1.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManager/httpcore5-5.0.1.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManager/jarchivelib-1.0.0.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManager/jsoup-1.13.1.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManager/slf4j-api-1.7.30.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManager/webdrivermanager-4.4.3.jar" sourcepath="libWebDriverManager/webdrivermanager-4.4.3-sources.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManager/webdrivermanager-4.4.3-sources.jar"/>
+	<classpathentry kind="lib" path="libLogging/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="libLogging/log4j-1.2.16.jar"/>
+	<classpathentry kind="lib" path="libExtentV2/bson-3.0.4.jar"/>
+	<classpathentry kind="lib" path="libExtentV2/extentreports-2.41.2.jar"/>
+	<classpathentry kind="lib" path="libExtentV2/freemarker-2.3.23.jar"/>
+	<classpathentry kind="lib" path="libExtentV2/mongodb-driver-3.0.4.jar"/>
+	<classpathentry kind="lib" path="libExtentV2/mongodb-driver-core-3.0.4.jar"/>
+	<classpathentry kind="lib" path="libExtentV2/sqlite-jdbc-3.8.11.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
