--- a/.classpath
+++ b/.classpath
@@ -21,8 +21,6 @@
 	<classpathentry kind="lib" path="libWebDriverManager/jarchivelib-1.0.0.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManager/jsoup-1.13.1.jar"/>
 	<classpathentry kind="lib" path="libWebDriverManager/slf4j-api-1.7.30.jar"/>
-	<classpathentry kind="lib" path="libWebDriverManager/webdrivermanager-4.4.3.jar" sourcepath="libWebDriverManager/webdrivermanager-4.4.3-sources.jar"/>
-	<classpathentry kind="lib" path="libWebDriverManager/webdrivermanager-4.4.3-sources.jar"/>
 	<classpathentry kind="lib" path="libLogging/commons-logging-1.2.jar"/>
 	<classpathentry kind="lib" path="libLogging/log4j-1.2.16.jar"/>
 	<classpathentry kind="lib" path="libReportNG/guice-3.0.jar"/>
@@ -34,5 +32,6 @@
 	<classpathentry kind="lib" path="libFaker/javafaker-1.0.1.jar" sourcepath="libFaker/javafaker-1.0.1-sources.jar"/>
 	<classpathentry kind="lib" path="libFaker/snakeyaml-1.23.jar"/>
 	<classpathentry kind="lib" path="libFaker/javafaker-1.0.1-sources.jar"/>
+	<classpathentry kind="lib" path="libWebDriverManager/webdrivermanager-4.2.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
